# Agentix

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  README.md  ROADMAP.md  flake.nix  pyproject.toml
.github/profile/: README.md
.github/workflows/: ci.yml  test.yml
agentix/: __init__.py  _plugin.py  dispatch.py  eval.py  idents.py  models.py  namespace.py  registry.py  rpc.py  sio.py  trace.py  validate.py  wire.py
agentix/cli/: __init__.py  _resolve.py  build.py  check.py  deploy.py  install.py  plugins.py
agentix/deployment/: _plugin.py  base.py  daytona.py  docker.py  e2b.py
agentix/dispatch/: __init__.py  bound.py  dispatcher.py
agentix/invoke/: __init__.py  invoker.py  shape.py
agentix/log/: __init__.py  _bridge.py
agentix/rollout/: __init__.py  pool.py
agentix/runtime/: PROTOCOL.md  __init__.py  __main__.py  _pump.py  builtins.py  client.py  codec.py  events.py  frames.py  loader.py  models.py  multiplexer.py  rpc.py  server.py  sio.py  worker.py
agentix/runtime/client/: _sio_facade.py  client.py
agentix/runtime/server/: __init__.py  app.py  builtins.py  llm_proxy.py  multiplexer.py  sio.py  trace_bridge.py  worker.py  worker_client.py
agentix/runtime/server/worker/: __init__.py  __main__.py  client.py  invoker.py  process.py
agentix/runtime/shared/: __init__.py  callables.py  codec.py  events.py  frames.py  framing.py  idents.py  models.py  rpc.py
agentix/trace/: __init__.py  _bridge.py  processors.py
agents/claude-code/: default.nix  runner.py
docs/: DEVELOPMENT.md  architecture.md  axes.mdx  closure-protocol.md  deployment.mdx  development.mdx  docs.json  extend-runtime.mdx  index.mdx  integrate-agent.mdx  integrate-dataset.mdx  namespace-protocol.md  plugin-authors.mdx  plugins.md  project-plan.md  quickstart.mdx  versioning-storage.md
docs/concepts/: bundles.mdx  remote-calls.mdx
docs/reference/: architecture.mdx  cli.mdx  namespace-protocol.mdx
examples/claude-code-swebench/: README.md  run.py
examples/demo/: run.sh
examples/demo/task/: Dockerfile  instruction.md
examples/hello-dataset/: dataset.py
examples/scripts/: export-closure.sh  inject-mount.sh  inject-upload.sh
primitives/_template/: Dockerfile  default.nix
primitives/bash/: pyproject.toml
primitives/bash/src/agentix/bash/: __init__.py
primitives/bash/src/agentix_primitive_bash/: __init__.py  _impl.py
primitives/files/: pyproject.toml
primitives/files/src/agentix/files/: __init__.py
primitives/files/src/agentix_primitive_files/: __init__.py  _impl.py
runtime/: default.nix  pyproject.toml
runtime/hnix/: __init__.py  __main__.py  client.py  models.py  runtime.py  server.py
tests/: _namespace_target.py  _rpc_helpers.py  _worker_target.py  conftest.py  test_closure_protocol.py  test_concurrent_remote.py  test_cross_process_trace.py  test_models.py  test_namespace.py  test_namespace_protocol.py  test_namespace_roundtrip.py  test_plugin_axes.py  test_plugin_registry.py  test_pubsub_pattern_demo.py  test_registry.py  test_remote_importable_module.py  test_rl_substrate.py  test_rpc_protocol.py  test_user_app_dispatch.py  test_worker_subprocess.py
tools/: gen_manifest.py
