[project]
name = "agentix"
version = "0.1.0"
description = "A Nix-closure runtime for Docker sandboxes"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    # Streams, bidi, and log subscription multiplex over a single Socket.IO
    # connection. The same package is both client and server.
    "python-socketio[asyncio-client]>=5.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
# `start` is the entry point the closure convention expects at
# /mnt/<ns>/entry/bin/start; `agentix-server` is an alias for dev ergonomics.
start = "agentix.runtime.server:main"
agentix-server = "agentix.runtime.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentix"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
# smoke_docker.py is a standalone script driven by CI's e2e job, not a pytest module.
norecursedirs = ["tests/closures"]
python_files = ["test_*.py"]
