[project]
name = "agentix"
version = "0.1.0"
description = "A Nix-closure runtime for Docker sandboxes"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    # Streams, bidi, and log subscription multiplex over a single Socket.IO
    # connection. The same package is both client and server.
    "python-socketio[asyncio-client]>=5.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "pyright>=1.1.380",
]
[project.scripts]
# Dev-side CLI: `agentix build`, `agentix check`. Subcommands live in
# `agentix.cli`. The CLI is intentionally thin — most logic is in the
# submodules so they can also be imported directly.
agentix = "agentix.cli:main"
# Runtime entrypoint the closure convention expects at
# /mnt/<ns>/entry/bin/start; `agentix-server` is an alias for dev ergonomics.
start = "agentix.runtime.server:main"
agentix-server = "agentix.runtime.server:main"

# Builtin deployments. Downstream backends declare additional entries
# under the same group (`[project.entry-points."agentix.deployment"]`
# in their pyproject.toml) and `pip install` makes them available to
# `agentix deploy <name>` with zero framework changes. This is one of
# the two plugin axes the framework supports; the other is
# `agentix.namespace`.
[project.entry-points."agentix.deployment"]
local = "agentix.deployment.docker:DockerDeployment"
daytona = "agentix.deployment.daytona:DaytonaDeployment"
e2b = "agentix.deployment.e2b:E2BDeployment"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentix"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pyright]
# Strict mode is the goal; raise this gradually as the codebase converges
# on the new Namespace/WirePattern shape. Today's basic mode catches the
# obvious mistakes without drowning in advisory diagnostics.
include = ["agentix", "primitives", "tools"]
exclude = ["**/__pycache__", ".venv"]
typeCheckingMode = "basic"
pythonVersion = "3.11"
reportMissingImports = "error"
reportUndefinedVariable = "error"
reportGeneralTypeIssues = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
# smoke_docker.py is a standalone script driven by CI's e2e job, not a pytest module.
norecursedirs = ["tests/closures"]
python_files = ["test_*.py"]
