[project]
name = "agentixx"
version = "0.2.1"
description = "Sandboxed rollouts you call like typed Python (import as `agentix`)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agentiix" }]
urls = { Homepage = "https://github.com/Agentiix/Agentix" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    # Streams, bidi, and log subscription share one Socket.IO connection.
    # The same package is both client and server.
    "python-socketio[asyncio-client]>=5.11",
    # Wire codec — msgpack for all RPC frames + Socket.IO event payloads.
    # Cross-language, no base64 overhead, native bytes, extension types
    # for ndarray + pydantic models.
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "pyright>=1.1.380",
]
[project.scripts]
# Dev-side CLI: `agentix build`.
# Subcommands live in `agentix.cli`. The CLI is intentionally thin —
# most logic is in the submodules so they can also be imported directly.
agentix = "agentix.cli:main"
# Runtime server entrypoint — the bundle image's Docker ENTRYPOINT.
agentix-server = "agentix.runtime.server:main"

# Deployment backends and runtime integrations ship in their own wheels.
# Runtime integrations are normal Python dependencies installed into the bundle.
#   pip install agentix-deployment-docker   # registers `local`
#   pip install agentix-deployment-daytona  # registers `daytona`
#   pip install agentix-deployment-e2b      # registers `e2b`
#   pip install agentix-runtime-basic       # registers `bash`, `files`

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentix"]
# `agentix build` ships Nix builder templates under `agentix/nix/`;
# hatchling includes non-.py files in packages automatically.

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pyright]
# Strict mode is the goal; raise this gradually. Today's basic mode
# catches the obvious mistakes without drowning in advisory diagnostics.
include = ["agentix"]
exclude = ["**/__pycache__", ".venv"]
typeCheckingMode = "basic"
pythonVersion = "3.11"
reportMissingImports = "error"
reportUndefinedVariable = "error"
reportGeneralTypeIssues = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
python_files = ["test_*.py"]
