[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentix-primitive-files"
version = "0.1.0"
description = "Sandbox file I/O primitive for Agentix"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/agentix_primitive_files"]
