[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentix-files"
version = "0.1.0"
description = "Sandbox file I/O primitive for Agentix"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."agentix.closure"]
files = "agentix.files:Files"

[tool.hatch.build.targets.wheel]
packages = ["src/agentix"]
